--- a/ext/lib/site/help/styles.styl
+++ b/ext/lib/site/help/styles.styl
@@ -11,3 +11,28 @@
         max-width: 100%
         padding: 0 0 0 20px
         list-style-position: inside
+
+.stats
+  .forums-total-container
+    padding: 15px
+    background-color: #0695d6
+    border-radius: 5px;
+
+    .data-value, .data-title
+      display: block
+      color: #FFF
+      font-size: 1.4rem
+    .data-title
+      font-weight: 700
+    @media screen and (min-width: 750px)
+      .data-value, .data-title
+        font-size: 2rem
+      .data-title
+        float: left
+      .data-value
+        float: right;
+
+  .text-center
+    text-align: center !important
+  .subtitle
+    font-weight: 300
