--- a/ext/lib/site/topic-layout/topic-article/social/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/social/styles.styl
@@ -5,7 +5,6 @@
   align-items: flex-start
   margin: 32px 20px 20px 0
   width:90px
-  height:90px
   @media (min-width: 991px)
     position:sticky
     top:10
@@ -14,6 +13,7 @@
     justify-content: space-between
     margin: 0
     margin-left:6%
+    margin-bottom: 20px
     width:100%
 
   .participants-box
