--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
@@ -22,3 +22,8 @@
             color:  #7b548a
             h5
                 color: inherit
+
+#results-chart
+  width: 100% !important
+  height: auto !important
+  max-width: 220px
