fix: en móvil se seguía viendo desplazado hacia la derecha en algunas páginas

--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
@@ -40,23 +40,23 @@
         margin-left: 0px
         margin-bottom: 15px
         background-color: #E8E8E8
-        @media screen and (max-width: 600px)
+        @media screen and (max-width: 631px)
           margin-left: 0
           width: 300px
-        @media screen and (max-width: 600px)
+        @media screen and (max-width: 631px)
           width: 100%
 
         .results-bar 
           border-radius: 19px
           background-color: #BCDDF2
         .poll-results
-          margin-right: -80px
           font-weight: 400
           font-size: 20px
           color: #000
           text-align: center
-          @media screen and (max-width: 490px)
-            margin-right: 0
+          margin-right: 0
+          @media (min-width: 632px)
+            margin-right: -80px
         .poll-option-label
           top: 4
           font-family: 'Roboto', sans-serif
