--- a/ext/lib/site/topic-layout/topic-article/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/styles.styl
@@ -5,7 +5,7 @@
   position: relative
   margin-left: auto
   margin-right: auto
-  padding: 40px 20px 20px
+  padding: 40px 5px
   max-width: 100%
   background-color: #f9f9f9
   @media (min-width: 991px)
