--- a/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/styles.styl
@@ -1,7 +1,10 @@
 .topic-article-content.topic-article-action
   background-color: #FFF
   box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.51)
-  padding: 20px 57px
+  padding: 20px 27px
+  @media (min-width: 544px)
+    padding: 20px 57px
+    
   .topic-action-voted
     display: flex
     flex-direction: column
