fix: opciones de tipo checkbox en votaciones se veían con el texto encima del checkbox en móvil

--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-poll/styles.styl
@@ -26,6 +26,9 @@
           position: static
           top: 7
           left: 25
+        .circle
+          position: static
+          display: inline-block
         .icon-check
           background-color: #3995D6
           z-index:-1
