fix: en listados ordenables de votaciones se veían mal cuando había textos largos (doble línea)

--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-hierarchy/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-hierarchy/styles.styl
@@ -19,7 +19,11 @@
       color: #0695d6
       font-weight: bold
       text-align: left
-
+      
+  li
+    line-height: inherit
+    padding-top: 0.5rem
+    
   span
     div
       display: flex
