mejoras de diseño en vista de celular para gráfico de torta de resultado votaciones

--- a/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/topic-action/topic-vote/styles.styl
@@ -27,3 +27,9 @@
   width: 100% !important
   height: auto !important
   max-width: 220px
+
+.results-box.topic-article-content.row
+  text-align: center
+  
+.vote-yes.votes-results
+  margin-top: 20px
