Agregar ícono de usuario verificado en cajas de comentarios

--- a/ext/lib/site/topic-layout/topic-article/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/styles.styl
@@ -52,6 +52,7 @@
   @import './topic-action/styles.styl'
   @import './topic-action/topic-range/styles.styl'
   @import './lateral-bar/styles.styl'
+  @import './comments/list/comment/header/styles.styl'
 
   .vote-options
     margin-left: auto
@@ -66,6 +67,7 @@
       padding:2em
     ol
       font-weight:100
+  
 
 iframe
   @media (min-width: 700px)
