Agregado opción de tipo de contenido en creación de nueva consulta

--- a/ext/lib/settings/forum-new/forum-form/styles.styl
+++ b/ext/lib/settings/forum-new/forum-form/styles.styl
@@ -1,3 +1,13 @@
 .forum-new-form
   label.rich-summary
     float none
+    
+  select
+    height: 42px
+    margin-top: 0px
+    margin-bottom: 0px
+    padding: 8px 12px
+    border: 1px solid #dedede
+    border-radius: 3px
+    background-color:  #fff
+    
