--- a/ext/lib/site/home-forum/styles.styl
+++ b/ext/lib/site/home-forum/styles.styl
@@ -25,7 +25,31 @@
     text-align: justify
     @media (max-width: 768px)
       padding: 0 10px
+    
+  .cargar-propuesta
+    text-align: center
 
+    h5
+      font-weight: 500
+      font-size: 25px
+      line-height: 30px
+      margin-bottom: 43px
+      position: relative
+      margin-top: 80px
+    h5:before
+      content: ''
+      width: 600px
+      height: 1px
+      position: absolute
+      border-top: 1px solid #707070
+      background-color: #707070
+      top: -2.5em;
+      @media (max-width: 767px)
+        width: 100%
+        left: 0
+    .btn, .btn:hover
+      color: white
+    
 
   .topics-container
     display: flex
