--- a/ext/lib/settings/forum-new/forum-form/template.jade
+++ b/ext/lib/settings/forum-new/forum-form/template.jade
@@ -33,7 +33,7 @@ main.container
               select.input-group(name='contentType', value='ejes', validate='required')
                 option(value='ejes')= 'Ejes de consulta'
                 option(value='propuestas')= 'Propuestas'
-                option(value='llamado')= 'Llamado'
+                option(value='llamado')= 'Convocatoria'
 
           fieldset
             label.rich-summary= t('forum.form.rich.summary.label')
