--- a/ext/lib/admin/admin-topics-form/template-llamado.jade
+++ b/ext/lib/admin/admin-topics-form/template-llamado.jade
@@ -20,6 +20,8 @@
           | &nbsp;
           i.icon-eye
     include commands-llamado
+    h5.sugerencia
+      = form.sugerencia 
     .topic-admin
       form(action=form.action, method=form.method, role='form', autocomplete='off', novalidate, autovalidate='autovalidate', autosubmit='autosubmit')
         - if (topic.privileges && !topic.privileges.canEdit)
