Campos propuestos para formulario de carga/modificación de prop. ciud. (para llamados) (falta replicar bien en vista pública)

--- a/ext/lib/admin/admin-topics-form/styles.styl
+++ b/ext/lib/admin/admin-topics-form/styles.styl
@@ -3,5 +3,5 @@
   @media (min-width: 767px)
     margin-left:0
         
-#topic-wrapper .sugerencia
-  margin-bottom: 30px
+  .sugerencia
+    margin-bottom: 30px
