Nuevos campos palabras y link de cierre, en creación/edición de consultas

--- a/ext/lib/settings/forum-new/forum-form/template.jade
+++ b/ext/lib/settings/forum-new/forum-form/template.jade
@@ -50,4 +50,14 @@ main.container
             .form-group.clearfix.summary
               input(type='text', name='cover', placeholder= t('admin-topics-form.placeholder.cover'), validate='url')
 
+          fieldset.palabrasCierre
+            label= t('forum.form.palabrasCierre.label')
+            .form-group.clearfix
+              textarea.form-control(name='palabrasCierre', maxlength=500)
+
+          fieldset.linkCierre
+            label= t('forum.form.linkCierre.label')
+            .form-group.clearfix.summary
+              input(type='text', name='linkCierre', placeholder= t('forum.form.linkCierre.placeholder'), validate='url')
+
         button.btn.btn-block.btn-primary.btn-lg= t('forum.form.create.submit')
