--- a/ext/lib/admin/admin-edit-forum/styles.styl
+++ b/ext/lib/admin/admin-edit-forum/styles.styl
@@ -45,3 +45,14 @@
     border 1px solid #dedede
     border-radius 3px
     background-color white
+    
+  textarea
+    display: block
+    width: 100%
+    margin-top: 0px
+    margin-bottom: 0px
+    padding: 8px 12px
+    border: 1px solid #dedede
+    border-radius: 3px
+    background-color: #fff
+    color: #000
