--- a/ext/lib/site/home-forum/styles.styl
+++ b/ext/lib/site/home-forum/styles.styl
@@ -28,6 +28,7 @@
     
   .cargar-propuesta
     text-align: center
+    margin: 30px auto 40px
 
     h5
       font-weight: 500
@@ -56,7 +57,7 @@
     flex-direction: row
     flex-wrap: wrap
     justify-content: center
-    padding-top: 4em
+    padding-top: 1.3em
 
     h5
       font-weight: 500
