Terminado mensaje de consulta/convocatoria cerrada, más palabras y link de cierre

--- a/ext/lib/site/home-forum/styles.styl
+++ b/ext/lib/site/home-forum/styles.styl
@@ -91,6 +91,20 @@
     max-width: 100%
     width: 300px
     margin: 0 10px 20px
+  
+  .consulta-cerrada
+    border: 1px solid #0695d6
+    background-color: #f0f8ff
+    border-radius: 3px
+    padding: 10px 30px 10px 50px
+    .lock-icon
+      width: 23px
+      position: absolute
+      left: 30px
+      top: 20px
+    
+  .btn-informe-cierre
+    padding: 12px 30px
 
 @import './forum-description/styles.styl'
 @import './forum-stats/styles.styl'
