Fix de diseño de íconos de redes sociales dentro de un eje/prop.

--- a/ext/lib/site/topic-layout/topic-article/social/styles.styl
+++ b/ext/lib/site/topic-layout/topic-article/social/styles.styl
@@ -6,6 +6,7 @@
   margin: 32px 20px 20px 0
   width:90px
   @media (min-width: 991px)
+    justify-content: flex-start
     position:sticky
     top:10
     z-index:1
@@ -45,7 +46,6 @@
 
   .share-links
     @media (min-width:990px)
-      width: 10px
       min-width:10px
     a
       background: #666
