--- a/ext/lib/admin/admin-topics-form/template-llamado.jade
+++ b/ext/lib/admin/admin-topics-form/template-llamado.jade
@@ -40,7 +40,7 @@
         .form-group
           label= '¿Cuál es tu propuesta?'
           textarea.form-control(name='body')= topic.body
-        .form-group
+        .form-group.tag
           label= 'Elegí la categoría asociada a tu propuesta'
           - if (te('admin-topics-form.description.tag'))
             span.help-text= t('admin-topics-form.description.tag')
